--- a/style.css
+++ b/style.css
@@ -5,30 +5,48 @@
     padding: 0;
     font-family: 'Work Sans', sans-serif;
 
+
 }
 
+body {
+    background: rgba(255, 144, 14, 0.1);
+}
+
+.p {
+    color: #727272;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.h2 {
+    font-weight: 00;
+    font-size: 35px;
+    color: black;
+}
 
 
 .container {
     margin-left: 5%;
     margin-right: 5%;
+    margin-bottom: 50px;
 
 }
 
 
 
 
-.hero-section{
-    background-color: rgb(0, 135, 232);
+.hero-section {
+
     margin-bottom: 50px;
 }
+
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 70px;
     margin-bottom: 50px;
-   
+
 }
 
 nav>div>h2 {
@@ -36,7 +54,8 @@ nav>div>h2 {
     font-size: 40px;
 
 }
-span{
+
+span {
     color: #FF900E;
 }
 
@@ -44,43 +63,182 @@ nav>div>a {
     margin-left: 15px;
     text-decoration: none;
     font-weight: bolder;
-font-size: 18px;
-color: black;
+    font-size: 18px;
+    color: rgb(255, 255, 255);
+    
+    padding: 5px 10px;
+    border: none;
+    border-radius: 7px;
 
 
 }
-.banner{
+
+.banner {
     padding-bottom: 50px;
 }
-.top-banner{
+
+.top-banner {
     text-align: center;
 }
-.top-banner >h1{
+
+.top-banner>h1 {
     font-weight: 700;
-font-size: 64px;
-color: white;
+    font-size: 64px;
+    color: rgb(0, 0, 0);
 
 }
-.top-banner >p{
+
+.top-banner>p {
     font-weight: 400;
-font-size: 16px;
-margin: 15px;
+    font-size: 16px;
+    margin: 15px;
 
 }
-.top-btn{
+
+.top-btn,
+.pri-btn {
     margin-bottom: 15px;
     width: 120px;
-height: 40px;
-background-color: #FF900E;
-border: none;
-font-weight: bolder;
-color: white;
-border-radius: 5px;
+    height: 40px;
+    border: none;
+    font-weight: bolder;
+    color: white;
+    border-radius: 5px;
 }
-.bottom-banner > img{
+
+.bottom-banner>img {
     width: 100%;
-    
+
 
 }
 
-/* nav section style end  */
+.hover-btn {
+    background: linear-gradient(to right, #000000 50%, #FF900E 50%);
+    background-size: 200% 100%;
+    background-position: right;
+    transition: all 1s ease-out;
+}
+
+.hover-btn:hover {
+
+    background-position: left;
+
+}
+
+
+
+
+/* top-article style start  */
+.top-article {
+    display: grid;
+    gap: 15px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    margin-bottom: 50px;
+    height: auto;
+    width: auto;
+
+}
+
+.item>img {
+    width: auto;
+    height: auto;
+    border-radius: 15px;
+}
+
+.item {
+
+    transition: 0.3s;
+
+
+}
+
+
+.item :hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+
+.item5 {
+    grid-column: 3/-1;
+    grid-row: -1/-3;
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+
+}
+
+.item5>div>p {
+    margin: 15px 0px;
+    width: 75%;
+
+}
+
+.gray-text {
+    color: #ababab;
+    font-weight: 200;
+}
+
+
+
+/* <!-- top article end  --> */
+
+.Features {
+    display: flex;
+
+}
+
+.Features>div {
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+
+.text-section {
+
+    width: 100%;
+}
+
+.text-section>h1 {
+
+    border-left: 3px solid #FF900E;
+    margin-bottom: 15px;
+}
+
+.banner-section {
+    width: 50%;
+}
+
+.card {
+
+    margin-top: 15px;
+    border-radius: 15px;
+    width: 75%;
+    height: auto;
+
+    transition: 0.3s;
+
+
+    /* height: 171px; */
+}
+
+.card:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+}
+
+.card>div {
+    padding: 15px;
+}
+
+.card>div>h4 {
+    font-weight: bolder;
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #FF900E;
+}
+
+/* banner section end  */
