top article responsive

--- a/style.css
+++ b/style.css
@@ -478,6 +478,14 @@ hr {
     .responsive-nav{
         height: auto;
     }
+
+    .top-article{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column
+        
+    }
 	
 }
 
